# UnfnshedApps

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run_tests.py
Master Parts Folder/Prototype/: Wall-Hook-Shelf.ai
Master_Parts_Folder/Prototype/: Spice-Shelf.ai  Spice-Shelf.dxf  Under-Kitchen-Sink-P1.ai  Under-Kitchen-Sink-P1.dxf  Under-Kitchen-Sink-P2.ai  Under-Kitchen-Sink-P2.dxf  Under-Kitchen-Sink-P3.ai  Under-Kitchen-Sink-P3.dxf  UnderKitchenStorageP1.ai  UnderKitchenStorageP1.dxf  UnderKitchenStorageP2.ai  UnderKitchenStorageP2.dxf  UnderKitchenStorageP3.ai  UnderKitchenStorageP3.dxf  UnderKitchenStorageP4.ai  UnderKitchenStorageP4.dxf  Wall-Hook-Arm.ai  Wall-Hook-Shelf.dxf  Wall-Hooks.ai  Wall-Hooks.dxf  kitchen-shelf-2.ai  kitchen-shelf-2.dxf  kitchen-shelf.ai  kitchen-shelf.dxf
UnfnCNC/: .gitignore  UnfnCNC.spec  build.py  main.py  requirements.txt
UnfnCNC/App Icon/: UnfnCNC Icon.ai  UnfnCNC.icns
UnfnCNC/bridge/: app_controller.py  clickable_preview_item.py  cutting_controller.py  damage_controller.py  preview_utils.py  (+2 more)
Unfnest/: .gitignore  Unfnest.spec  build.py  main.py  requirements.txt
Unfnshed-Admin/: UnfnshedAdmin.spec  build.py  main.py
Unfnshed-Server/: .env.example  .gitignore  README.md  requirements.txt  schema.sql
Unfnship/: Unfnship.spec  build.py  main.py
Unfnventory/: .gitignore  Unfnventory.spec  build.py  main.py  requirements.txt
docs/: NESTING_ALGORITHM_DESIGN.md
shared/: __init__.py  api_client_base.py  app_controller_base.py  build_common.py  config_base.py  connection_worker.py  dxf_preview_base.py
(+287 files in other folders)
